# ChannelHelm

./: .deploy.env.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  biome.json  drizzle.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  session-01-kickoff-prompt.md  tsconfig.json  vitest.config.ts
docs/: channelhelm-technical-contract-v1.md  cloudflare-tunnel.md  design-brief.md  settings.md
migrations/: 0000_familiar_tyrannus.sql  0001_stormy_master_mold.sql  0002_cynical_nebula.sql  0003_futuristic_randall.sql  0004_tearful_wallow.sql  0005_settings.sql  0006_youtube_oauth.sql  0007_archive_lifecycle.sql  0008_youtube_oauth_states.sql  0009_image_providers.sql  0010_whole_exiles.sql  0011_oval_umar.sql
ml/: _lib.py  describe_frames.py  diarize.py  ocr.py  pyproject.toml  transcribe.py
prompts/: analyze_intelligence.v1.md  article_brief.v1.md  bluesky_post.v1.md  content_ideas.v1.md  discord_message.v1.md  facebook_post.v1.md  faq.v1.md  google_business_post.v1.md  linkedin_post.v1.md  long_clip_plan.v1.md  newsletter_summary.v1.md  pinterest_pin.v1.md  reddit_post.v1.md  short_clip_description.v1.md  short_clip_plan.v1.md  short_clip_plan.v2.md  subtitle_translation.v1.md  telegram_post.v1.md  threads_post.v1.md  thumbnail_image.v1.md  x_post.v1.md  x_thread.v1.md  youtube_chapters.v1.md  youtube_description.v1.md  youtube_description.v2.md  youtube_pinned_comment.v1.md  youtube_tags.v1.md  youtube_title_set.v1.md
public/: ab-testing-guide.html  contact.html  for-creators.html  handbook.html  how-it-works.html  index.html  (+15 more)
(+216 files in other folders)
