[project]
name = "channelhelm-ml"
version = "0.0.1"
description = "MLX-bound ML CLIs for ChannelHelm (transcribe, diarize, describe_frames, ocr)"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "mlx-vlm>=0.1.0",
    "ocrmac>=0.5.0",
    "pillow>=10.0.0",
    "pyannote.audio>=3.3.0",
    # whisperx alignment is optional — pyannote diarization alone is enough
    # for v1 speaker labels. Add whisperx when word-level alignment to
    # speaker turns becomes a requirement.
]

[tool.uv]
package = false
